--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+openai
 numpy
 pandas
 matplotlib
@@ -5,9 +6,9 @@ seaborn
 tensorflow
 tqdm
 opencv-python-headless
-pillow
+Pillow
 scikit-learn
 pytesseract
 streamlit
 pyodbc
-sqlalchemy
+PyPDF2
